force-app/main/default/objects/Purchase_Header__c/Purchase_Header__c.object-meta.xml
<CustomObject>
    <label>Purchase Header</label>
    <nameField>
        <label>Purchase Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Header</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>