force-app/main/default/objects/Purchase_Header__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Header 2</relationshipLabel>
    <relationshipName>Purchase_Header</relationshipName>
    <type>Lookup</type>
</CustomField>