force-app/main/default/objects/Purchase_Header__c/fields/ESB_query_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>ESB_query_Timestamp__c</fullName>
    <label>ESB query Timestamp</label>
    <type>DateTime</type>
</CustomField>