force-app/main/default/objects/Purchase_Header__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <description>Exchange rate for the currency associated with the entity with respect to the base currency.</description>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>