force-app/main/default/objects/Purchase_Header__c/fields/ForceSyncDate__c.field-meta.xml
<CustomField>
    <fullName>ForceSyncDate__c</fullName>
    <label>ForceSyncDate</label>
    <type>DateTime</type>
</CustomField>