force-app/main/default/objects/Purchase_Header__c/fields/Global_E_id__c.field-meta.xml
<CustomField>
    <fullName>Global_E_id__c</fullName>
    <externalId>true</externalId>
    <label>Global E id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>