force-app/main/default/objects/Purchase_Header__c/fields/Main_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Main_Payment_Method__c</fullName>
    <description>Unique identifier for Payment Method associated with Transaction.</description>
    <label>Main Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCOUNT_CREDIT</fullName>
            </value>
            <value>
                <fullName>AFTERPAY</fullName>
            </value>
            <value>
                <fullName>ALIPAY</fullName>
            </value>
            <value>
                <fullName>AMAZON PAY</fullName>
            </value>
            <value>
                <fullName>AMERICAN EXPRESS</fullName>
            </value>
            <value>
                <fullName>AMEX</fullName>
            </value>
            <value>
                <fullName>APPLE PAY</fullName>
            </value>
            <value>
                <fullName>APPLE_PAY</fullName>
            </value>
            <value>
                <fullName>APPLE_PAY_AMEX</fullName>
            </value>
            <value>
                <fullName>APPLE_PAY_DISCOVER</fullName>
            </value>
            <value>
                <fullName>APPLE_PAY_MC</fullName>
            </value>
            <value>
                <fullName>APPLE_PAY_VISA</fullName>
            </value>
            <value>
                <fullName>AUD_CURRENCY</fullName>
            </value>
            <value>
                <fullName>BANCOMAT</fullName>
            </value>
            <value>
                <fullName>BANK_TRANSFER</fullName>
            </value>
            <value>
                <fullName>BOC</fullName>
            </value>
            <value>
                <fullName>BTM_CARD</fullName>
            </value>
            <value>
                <fullName>CAD_CURRENCY</fullName>
            </value>
            <value>
                <fullName>CARTASI</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>CHECK</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>CHF_CURRENCY</fullName>
            </value>
            <value>
                <fullName>CNY_CURRENCY</fullName>
            </value>
            <value>
                <fullName>COD_CASINO_CARD</fullName>
            </value>
            <value>
                <fullName>COD_CASINO_COUPON</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>CREDIT_CARD</fullName>
            </value>
            <value>
                <fullName>CREDIT_CARD_EFT_LINK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>