force-app/main/default/objects/Purchase_Header__c/fields/POS_Terminal__c.field-meta.xml
<CustomField>
    <fullName>POS_Terminal__c</fullName>
    <label>POS Terminal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>