force-app/main/default/objects/Purchase_Header__c/fields/Purchase_Channel__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Channel__c</fullName>
    <label>Purchase Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>ISO</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>ECOM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>