force-app/main/default/objects/Purchase_Header__c/fields/Purchase_Type__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Type__c</fullName>
    <label>Purchase Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>ECOM</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Retail</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Farfetch</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Atelier</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Not Defined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>