force-app/main/default/objects/Purchase_Header__c/fields/Reassigned_store__c.field-meta.xml
<CustomField>
    <fullName>Reassigned_store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reassigned store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Purchase Header (Reassigned store)</relationshipLabel>
    <relationshipName>Purchase_Header1</relationshipName>
    <type>Lookup</type>
</CustomField>