force-app/main/default/objects/Purchase_Header__c/fields/Send_to_ORCE__c.field-meta.xml
<CustomField>
    <fullName>Send_to_ORCE__c</fullName>
    <formula>false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send to ORCE</label>
    <type>Checkbox</type>
</CustomField>