force-app/main/default/objects/Purchase_Header__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Unique identifier for Store associated with Transaction.</description>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Purchase Header</relationshipLabel>
    <relationshipName>Purchase_Header</relationshipName>
    <type>Lookup</type>
</CustomField>