force-app/main/default/objects/Purchase_Header__c/fields/Total_Amount_Base__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Base__c</fullName>
    <label>Total Amount (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>