force-app/main/default/objects/Purchase_Header__c/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <label>Total Discount %</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>