force-app/main/default/objects/Purchase_Header__c/fields/Total_Discount_Amount_Base__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Amount_Base__c</fullName>
    <description>Value of the Total Discount Amount in base currency.</description>
    <label>Total Discount Amount (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>