force-app/main/default/objects/Purchase_Header__c/fields/Total_Tax_1__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_1__c</fullName>
    <label>Total Tax 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>