force-app/main/default/objects/Purchase_Header__c/fields/Total_Tax_2__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_2__c</fullName>
    <label>Total Tax 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>