force-app/main/default/objects/Purchase_Header__c/fields/Transaction_no__c.field-meta.xml
<CustomField>
    <fullName>Transaction_no__c</fullName>
    <label>Transaction no.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>