force-app/main/default/objects/Purchase_Header__c/fields/Transaction_sent_to_Oracle__c.field-meta.xml
<CustomField>
    <fullName>Transaction_sent_to_Oracle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transaction sent to Oracle</label>
    <type>Checkbox</type>
</CustomField>