force-app/main/default/objects/Purchase_Header__c/fields/Tulip_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Tulip_Integration_Status__c</fullName>
    <label>Tulip Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>166100004</fullName>
                <default>true</default>
                <label>Not To Be Sent</label>
            </value>
            <value>
                <fullName>166100000</fullName>
                <label>To Be Processed</label>
            </value>
            <value>
                <fullName>166100001</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>166100002</fullName>
                <label>Sent To AzureServiceBus</label>
            </value>
            <value>
                <fullName>166100003</fullName>
                <label>Failed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>